improve eelement selection

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header id="header">
       <h1 id="logo">Quick Notes</h1>
       <div id="buttons">
-        <button id="add-note">+ Add Note</button>
-        <button id="mode-changer">🌙</button>
+        <button id="addNoteBtn" class="add-note-btn">+ Add Note</button>
+        <button id="themeToggleBtn" class="theme-toggle-btn">🌙</button>
       </div>
     </header>
     <main id="notes-grid"></main>
